# check_4_icinga

./: CMakeLists.txt  CmakeLists.txt  README.md  check_linux_ram.c  run.sh
conf/: CMakeLists.txt  linux.conf
contrib/: check_4_icinga.spec
scripts/: release-binary_rpm.sh
src/: CMakeLists.txt  check_linux_disk.c  check_linux_load.c
